# lambda-wasmtime

./: .gitignore  ARTICLE.md  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  README.md  bindings.rs  bootstrap  bootstrap_base  cdk.json  handler.wit  lambda.wit  package-lock.json  package.json  tsconfig.json  zipup.sh
.cargo/: config
.github/: ci_setup.yml
.github/workflows/: ci.yml  demo.yml  release.yml  shellcheck.yml
demo/: .gitignore  Cargo.toml  Makefile.toml  README.md  demo.sh  test.sh
demo/src/: lib.rs
examples/http-as/: index.ts  package-lock.json  package.json
examples/http-rust/: Cargo.toml  bindings.rs
examples/http-rust/src/: lib.rs
examples/thumbnail-maker/: .gitignore  Cargo.toml  demo.sh
examples/thumbnail-maker/src/: lib.rs
lib/: cdk-stack.ts
src/: engine.rs  main.rs
test/: lambda.wasm  lambda.wat
