[package]
name = "lambda-wasmtime-http"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
futures = "0.3"
http = "0.2"
lambda_runtime = "0.5"
openssl = { version = "0.10", features = ["vendored"] }
serde = "1"
tokio = { version = "1.4", features = [ "full" ] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasmtime = "0.34"
wasmtime-wasi = "0.34"
wasi-common = "0.34"
wasi-cap-std-sync = "0.34"
wasi-experimental-http-wasmtime = "0.9"

[workspace]
    members = [
        "demo"
    ]

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[features]

[package.metadata.lambda.env]
RUST_LOG = "debug"

[package.metadata]
wasm-opt = false
