[package]
name = "lambda-wasmtime-http"
version = "0.1.0"
authors = ["Eduardo Rodrigues <eduardomourar@users.noreply.github.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
lambda_runtime = "0.5"
openssl = { version = "0.10", features = ["vendored"] }
serde_json = "1"
tokio = { version = "1.4", features = [ "full" ] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasmtime = "0.34"
wasmtime-wasi = "0.34"
wasi-common = "0.34"
wasi-cap-std-sync = "0.34"
wasi-experimental-http-wasmtime = { git = "https://github.com/deislabs/wasi-experimental-http", rev = "a4e1ee14a1f2d520289185537c64c315c87c1836" }
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "d086240c74eabae6f225c90c74d705fe10f2d8dc" }

[workspace]
    members = [
        "examples/http-rust",
        "examples/thumbnail-maker"
    ]

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[features]

[package.metadata.lambda.env]
RUST_LOG = "debug"

[package.metadata]
wasm-opt = true

[profile.release]
lto = true
