[package]
name = "handler"
version = "0.1.0"
authors = ["Eduardo Rodrigues <eduardomourar@users.noreply.github.com>"]
edition = "2021"

[lib]
crate-type = ['cdylib']

[dependencies]
bytes = "1"
http  = "0.2"
serde_json = "1"
tokio = { version = "1.18", features = [ "fs", "rt" ] }
wasi-experimental-http = { git = "https://github.com/deislabs/wasi-experimental-http", rev = "a4e1ee14a1f2d520289185537c64c315c87c1836" }
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "d086240c74eabae6f225c90c74d705fe10f2d8dc" }
