
[package]
name = "demo"
version = "0.1.0"
authors = ["Noah Anabiik Schwarz <noah.anabiik.schwarz@gmail.com>"]
edition = "2018"

[lib]
crate-type = ['cdylib']

[dependencies]
anyhow = "1.0.19"
base64 = "0.3.1"
image = "0.22.3"
serde_json = "1.0.41"
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "d086240c74eabae6f225c90c74d705fe10f2d8dc" }
